--- a/MPHThesis.rmd
+++ b/MPHThesis.rmd
@@ -1,14 +1,32 @@
 ---
-title: "Abramson_MPHThesis_ECOEPI"
+title: "MPH Thesis: Lindsey Abramson"
 output: github_document
 date: "2025-10-01"
 ---
 
 ```{r setup, echo = FALSE, message = FALSE}
+library(knitr)
 library(tidyverse)
+library(dplyr)
 library(readxl)
 library(haven)
-library(knitr)
+library(leaflet)
+
+knitr::opts_chunk$set(
+  fig.width = 6,
+  fig.asp = .6,
+  out.width = "90%"
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
 ```
 
 
@@ -27,69 +45,72 @@ Standardize by transect
 
 ```
 
+
+
 ## Descriptive Summaries
 Overview
 ```{r}
-overview <- ticknyc_df %>%
+ticknyc_df |>
   summarise(
-    Total_Transects = n(),
+      Total_Transects = n(),
     Total_Ticks = sum(total, na.rm = TRUE),
     Mean_Ticks_Per_Transect = round(mean(total, na.rm = TRUE), 2),
     Max_Ticks_Single_Transect = max(total, na.rm = TRUE)
-  )
-
-cat("\n\n### Overall Summary\n")
-kable(overview, format = "simple", caption = "Overall sampling statistics")
+  ) |>
+   knitr::kable()
 ```
+
+
 
 County summary
 ```{r}
-county_totals <- ticknyc_df %>%
-  group_by(county) %>%
+ticknyc_df |>
+  group_by(county) |>
   summarise(
     Transects = n(),
     Total_Ticks = sum(total, na.rm = TRUE),
-    Mean_Ticks_Per_Transect = round(mean(total, na.rm = TRUE), 2)
-  ) %>%
-  arrange(desc(Total_Ticks))
-
-cat("\n\n### County Totals\n")
-kable(county_totals, format = "simple", caption = "Tick counts by county")
+    Mean_ticks_per_transect = mean(total, na.rm = TRUE),
+    Median_ticks_per_transect = median(total, na.rm = TRUE),
+    Transects_with_ticks = sum(total > 0, na.rm = TRUE),
+    Percent_transects_with_ticks = round(mean(total > 0, na.rm = TRUE) * 100, 1),
+  ) |>
+  arrange(desc(Total_Ticks)) |>
+   knitr::kable()
 ```
+
 
 
 Transect type summary
 ```{r}
-transect_totals <- ticknyc_df %>%
-  group_by(transect_type) %>%
+ticknyc_df |>
+  group_by(transect_type) |>
   summarise(
-    Transects = n(),
+   Transects = n(),
     Total_Ticks = sum(total, na.rm = TRUE),
-    Mean_Ticks_Per_Transect = round(mean(total, na.rm = TRUE), 2)
-  ) %>%
-  arrange(desc(Total_Ticks))
-
-cat("\n\n### Transect Type Totals\n")
-kable(transect_totals, format = "simple", caption = "Tick counts by transect type")
+    Mean_ticks_per_transect = mean(total, na.rm = TRUE),
+    Median_ticks_per_transect = median(total, na.rm = TRUE),
+    Transects_with_ticks = sum(total > 0, na.rm = TRUE),
+    Percent_transects_with_ticks = round(mean(total > 0, na.rm = TRUE) * 100, 1)) |> 
+  arrange(desc(Total_Ticks)) |>
+   knitr::kable()
 ```
 
-Species by transect type
+
+
+Species counts
 ```{r}
-species_transect <- ticknyc_df %>%
-  group_by(transect_type) %>%
+ticknyc_df |>
   summarise(
-    ixodes_scapularis = sum(ixodes_scapularis_adult + ixodes_scapularis_nymph + ixodes_scapularis_larva, na.rm = TRUE),
-    haemaphysalis_longicornis = sum(haemaphysalis_longicornis_adult + haemaphysalis_longicornis_nymph + haemaphysalis_longicornis_larva, na.rm = TRUE),
-    dermacentor_variabilis = sum(dermacentor_variabilis_adult + dermacentor_variabilis_nymph + dermacentor_variabilis_larva, na.rm = TRUE),
-    amblyomma_americanum = sum(amblyomma_americanum_adult + amblyomma_americanum_nymph + amblyomma_americanum_larva, na.rm = TRUE),
-    unknown = sum(unknown_adult + unknown_nymph + unknown_larva + unknown_unknown, na.rm = TRUE)
-  ) %>%
-  pivot_longer(-transect_type, names_to = "species", values_to = "count") %>%
-  pivot_wider(names_from = transect_type, values_from = count, values_fill = 0)
-
-cat("\n\n### Species by Transect Type\n")
-kable(species_transect, format = "simple", caption = "Total tick counts by species and transect type")
+    ixodes_total = sum(across(starts_with("ixodes")), na.rm = TRUE),
+    amblyomma_total = sum(across(starts_with("amblyomma")), na.rm = TRUE),
+    dermacentor_total = sum(across(starts_with("dermacentor")), na.rm = TRUE),
+    haemaphysalis_total = sum(across(starts_with("haemaphysalis")), na.rm = TRUE),
+    rhipicephalus_total = sum(across(starts_with("rhipicephalus")), na.rm = TRUE),
+    unknown_total = sum(across(starts_with("unknown")), na.rm = TRUE)
+) |>
+   knitr::kable()
 ```
+
 
 
 Species + life stage count
@@ -98,30 +119,50 @@ ticknyc_df |>
   summarise(across(amblyomma_americanum_adult:unknown_unknown, ~sum(., na.rm = TRUE))) |>
   pivot_longer(everything(), names_to = "Species_LifeStage", values_to = "Count") |>
   arrange(desc(Count)) |>
-  print()
+  print() |>
+   knitr::kable()
 ```
+
+
+
+Species by transect type
+```{r}
+ticknyc_df |>
+  group_by(transect_type) |>
+  summarise(
+      ixodes_total = sum(across(starts_with("ixodes")), na.rm = TRUE),
+    amblyomma_total = sum(across(starts_with("amblyomma")), na.rm = TRUE),
+    dermacentor_total = sum(across(starts_with("dermacentor")), na.rm = TRUE),
+    haemaphysalis_total = sum(across(starts_with("haemaphysalis")), na.rm = TRUE),
+    rhipicephalus_total = sum(across(starts_with("rhipicephalus")), na.rm = TRUE),
+    unknown_total = sum(across(starts_with("unknown")), na.rm = TRUE)
+  ) |>
+  pivot_longer(-transect_type, names_to = "species", values_to = "count") %>%
+  pivot_wider(names_from = transect_type, values_from = count, values_fill = 0) |>
+   knitr::kable()
+```
+
+
 
 Species count in each county
 ```{r}
-species_county <- ticknyc_df %>%
-  group_by(county) %>%
+ticknyc_df |>
+  group_by(county) |>
   summarise(
-    ixodes_scapularis = sum(ixodes_scapularis_adult + ixodes_scapularis_nymph + ixodes_scapularis_larva, na.rm = TRUE),
-    haemaphysalis_longicornis = sum(haemaphysalis_longicornis_adult + haemaphysalis_longicornis_nymph + haemaphysalis_longicornis_larva, na.rm = TRUE),
-    dermacentor_variabilis = sum(dermacentor_variabilis_adult + dermacentor_variabilis_nymph + dermacentor_variabilis_larva, na.rm = TRUE),
-    amblyomma_americanum = sum(amblyomma_americanum_adult + amblyomma_americanum_nymph + amblyomma_americanum_larva, na.rm = TRUE),
-    unknown = sum(unknown_adult + unknown_nymph + unknown_larva + unknown_unknown, na.rm = TRUE)
-  ) %>%
-  pivot_longer(-county, names_to = "species", values_to = "count") %>%
-  pivot_wider(names_from = county, values_from = count, values_fill = 0)
-
-cat("### Species by County\n")
-kable(species_county, format = "simple", caption = "Total tick counts by species and county")
+    ixodes_total = sum(across(starts_with("ixodes")), na.rm = TRUE),
+    amblyomma_total = sum(across(starts_with("amblyomma")), na.rm = TRUE),
+    dermacentor_total = sum(across(starts_with("dermacentor")), na.rm = TRUE),
+    haemaphysalis_total = sum(across(starts_with("haemaphysalis")), na.rm = TRUE),
+    rhipicephalus_total = sum(across(starts_with("rhipicephalus")), na.rm = TRUE),
+    unknown_total = sum(across(starts_with("unknown")), na.rm = TRUE)
+  ) |>
+  pivot_longer(-county, names_to = "species", values_to = "count") |>
+  pivot_wider(names_from = county, values_from = count, values_fill = 0) |>
+    knitr::kable()
 ```
 
 Life stages count
 ```{r}
-# LIFE STAGES SUMMARY
 ticknyc_df |>
   summarise(
     Adults = sum(across(ends_with("_adult")), na.rm = TRUE),
@@ -129,7 +170,7 @@ ticknyc_df |>
     Larvae = sum(across(ends_with("_larva")), na.rm = TRUE),
     Total = Adults + Nymphs + Larvae
   ) |>
-  print()
+    knitr::kable()
 ```
 
 Life staage count by county
@@ -142,7 +183,7 @@ ticknyc_df |>
     Larvae = sum(across(ends_with("_larva")), na.rm = TRUE),
     Total = Adults + Nymphs + Larvae
   ) |>
-  print()
+  knitr::kable()
 ```
 
 Life stage count by transect type
@@ -155,59 +196,5 @@ ticknyc_df |>
     Larvae = sum(across(ends_with("_larva")), na.rm = TRUE),
     Total = Adults + Nymphs + Larvae
   ) |>
-  print()
+  knitr::kable()
 ```
-
-
-Species (lfiestages combined) in each transect
-```{r}
-species_transect_wide <- ticknyc_df %>%
-  group_by(transect_type) %>%
-  summarise(
-    ixodes_scapularis = sum(ixodes_scapularis_adult + ixodes_scapularis_nymph + ixodes_scapularis_larva, na.rm = TRUE),
-    haemaphysalis_longicornis = sum(haemaphysalis_longicornis_adult + haemaphysalis_longicornis_nymph + haemaphysalis_longicornis_larva, na.rm = TRUE),
-    dermacentor_variabilis = sum(dermacentor_variabilis_adult + dermacentor_variabilis_nymph + dermacentor_variabilis_larva, na.rm = TRUE),
-    amblyomma_americanum = sum(amblyomma_americanum_adult + amblyomma_americanum_nymph + amblyomma_americanum_larva, na.rm = TRUE),
-    unknown = sum(unknown_adult + unknown_nymph + unknown_larva + unknown_unknown, na.rm = TRUE)
-  ) %>%
-  pivot_longer(-transect_type, names_to = "species", values_to = "count") %>%
-  pivot_wider(names_from = transect_type, values_from = count, values_fill = 0)
-
-print(species_transect_wide)
-```
-
-```{r}
-library(tidyverse)
-
-# Simple table: species as rows, counties as columns
-species_county <- ticknyc_df %>%
-  group_by(county) %>%
-  summarise(
-    ixodes_scapularis = sum(ixodes_scapularis_adult + ixodes_scapularis_nymph + ixodes_scapularis_larva, na.rm = TRUE),
-    haemaphysalis_longicornis = sum(haemaphysalis_longicornis_adult + haemaphysalis_longicornis_nymph + haemaphysalis_longicornis_larva, na.rm = TRUE),
-    dermacentor_variabilis = sum(dermacentor_variabilis_adult + dermacentor_variabilis_nymph + dermacentor_variabilis_larva, na.rm = TRUE),
-    amblyomma_americanum = sum(amblyomma_americanum_adult + amblyomma_americanum_nymph + amblyomma_americanum_larva, na.rm = TRUE),
-    unknown = sum(unknown_adult + unknown_nymph + unknown_larva + unknown_unknown, na.rm = TRUE)
-  ) %>%
-  pivot_longer(-county, names_to = "species", values_to = "count") %>%
-  pivot_wider(names_from = county, values_from = count, values_fill = 0)
-
-print(species_county)
-```
-
-```{r}
-species_county_transect <- ticknyc_df %>%
-  group_by(county, transect_type) %>%
-  summarise(
-    ixodes_scapularis = sum(ixodes_scapularis_adult + ixodes_scapularis_nymph + ixodes_scapularis_larva, na.rm = TRUE),
-    haemaphysalis_longicornis = sum(haemaphysalis_longicornis_adult + haemaphysalis_longicornis_nymph + haemaphysalis_longicornis_larva, na.rm = TRUE),
-    dermacentor_variabilis = sum(dermacentor_variabilis_adult + dermacentor_variabilis_nymph + dermacentor_variabilis_larva, na.rm = TRUE),
-    amblyomma_americanum = sum(amblyomma_americanum_adult + amblyomma_americanum_nymph + amblyomma_americanum_larva, na.rm = TRUE),
-    unknown = sum(unknown_adult + unknown_nymph + unknown_larva + unknown_unknown, na.rm = TRUE)
-  ) %>%
-  pivot_longer(-c(county, transect_type), names_to = "species", values_to = "count") %>%
-  pivot_wider(names_from = c(county, transect_type), values_from = count, values_fill = 0)
-
-print(species_county_transect)
-```
-
