--- a/MPHThesis.rmd
+++ b/MPHThesis.rmd
@@ -4,7 +4,20 @@ output: github_document
 date: "2025-10-01"
 ---
 
+Main research question?
+
+
+Go in and separate by each year and county. 
+Overlapping 45 parks between the two years.
+Ask maria about including infection prevalence.
+Just focus on nymphas ticks or include all?
+Jesse's thesis?
+Visual map to show the different transect types.
+Marie has the layers for mappings.
+
+
 ```{r setup, echo = FALSE, message = FALSE}
+library(geosphere)
 library(knitr)
 library(tidyverse)
 library(dplyr)
@@ -40,12 +53,50 @@ read_csv("data/Tick_nyc_clean_23_24.csv") |>
     mutate(date = mdy(date))
 ```
 
-Standardize by transect
+Standardize by transect for 100m. Create a new column, by 100m.
+By park and transect type.
 ```{r}
+# Fix the GPS parsing - handle the different formats in your data
+ticknyc_df$fraction_of_100m <- apply(ticknyc_df, 1, function(row) {
+  tryCatch({
+    # Extract coordinates
+    start_lon <- as.numeric(row['longitude_start'])
+    start_lat <- as.numeric(row['latitude_start'])
+    
+    # Clean and parse end coordinates from gps_end
+    gps_end <- row['gps_end']
+    
+    # Remove any spaces and split by comma
+    coords_clean <- gsub("\\s", "", gps_end)  # Remove all spaces
+    coords_split <- strsplit(coords_clean, ",")[[1]]
+    
+    end_lat <- as.numeric(coords_split[1])
+    end_lon <- as.numeric(coords_split[2])
+    
+    # Calculate distance in meters
+    distance_m <- distGeo(c(start_lon, start_lat), c(end_lon, end_lat))
+    
+    # Return fraction of 100m
+    round(distance_m / 100, 4)
+    
+  }, error = function(e) {
+    return(NA)
+  })
+})
+
+# Create standardized 100m transect ID
+ticknyc_df$transect_100m_standard <- paste0(ticknyc_df$transect_no, "_", round(ticknyc_df$fraction_of_100m, 2))
+
+# Check if it worked
+head(ticknyc_df[, c('transect_no', 'longitude_start', 'latitude_start', 'gps_end', 'fraction_of_100m', 'transect_100m_standard')])
+
+# See how many succeeded
+sum(!is.na(ticknyc_df$fraction_of_100m))
 
 ```
 
-Correct for date (phenology)
+
+Correct for date (phenology). Describe the phenology. *Discuss at the group meeting.Can put the date as a random effect 
 ```{r}
 
 ```
@@ -55,9 +106,29 @@ Correct for weather?
 
 ```
 
+## Main Descriptive Summaries
+
+```{r}
+ticknyc_df |>
+  group_by(transect_type) |>
+  summarise(
+    amblyomma_nymph_count = sum(amblyomma_americanum_nymph),
+    ixodes_nymph_count = sum(ixodes_scapularis_nymph)
+  ) |>
+   knitr::kable()
+
+ticknyc_df |>
+  group_by(transect_type) |>
+  summarise(
+    mean_amblyomma_nymph = mean(amblyomma_americanum_nymph, na.rm = TRUE),
+    mean_ixodes_nymph = mean(ixodes_scapularis_nymph, na.rm = TRUE),
+    n_transects = n()
+  )  |>
+   knitr::kable()
+```
 
 
-## Descriptive Summaries
+## Extra Descriptive Summaries
 Overview
 ```{r}
 ticknyc_df |>
@@ -81,7 +152,6 @@ ticknyc_df |>
     Total_Ticks = sum(total, na.rm = TRUE),
     Mean_ticks_per_transect = mean(total, na.rm = TRUE),
     Median_ticks_per_transect = median(total, na.rm = TRUE),
-    Transects_with_ticks = sum(total > 0, na.rm = TRUE),
     Percent_transects_with_ticks = round(mean(total > 0, na.rm = TRUE) * 100, 1),
   ) |>
   arrange(desc(Total_Ticks)) |>
@@ -99,7 +169,6 @@ ticknyc_df |>
     Total_Ticks = sum(total, na.rm = TRUE),
     Mean_ticks_per_transect = mean(total, na.rm = TRUE),
     Median_ticks_per_transect = median(total, na.rm = TRUE),
-    Transects_with_ticks = sum(total > 0, na.rm = TRUE),
     Percent_transects_with_ticks = round(mean(total > 0, na.rm = TRUE) * 100, 1)) |> 
   arrange(desc(Total_Ticks)) |>
    knitr::kable()
@@ -208,3 +277,5 @@ ticknyc_df |>
   ) |>
   knitr::kable()
 ```
+
+
